# dice-roller-discord-bot

./: Cargo.toml  README.md
dice-roller/: Cargo.toml
dice-roller/src/: lib.rs
dice-roller/src/lang/: constant.rs  dice.rs  mod.rs
dice-roller/src/util/: nom.rs
discord-bot/: Cargo.toml
discord-bot/src/: main.rs
discord-bot/src/command/: mod.rs  roll.rs
src/: main.rs
src/command/: help.rs  mod.rs  roll.rs  table.rs
src/command/lang/: error.rs  error_token.rs  mod.rs  parse.rs
