[package]
name = "dice-roller-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
indoc = "2.0.5"
itertools = "0.13.0"
poise = "0.6.1"
rand = "0.8.5"
regex = "1.10.5"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.46.0"
shuttle-serenity = "0.46.0"
tokio = "1.26.0"
tracing = "0.1.37"
